--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Deprecated==1.2.13
 Django==4.1.1
 django-rq==2.4.1
 djangorestframework==3.14.0
+gunicorn==20.1.0
 idna==3.4
 packaging==21.3
 Pillow==9.2.0
@@ -18,4 +19,5 @@ requests==2.28.1
 rq==1.11.1
 sqlparse==0.4.3
 urllib3==1.26.12
+whitenoise==6.2.0
 wrapt==1.14.1
